--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="if_you_have_an_account_login">If you have an account.. <u><b>Login</b></u></string>
     <string name="don_t_have_an_account_sign_up">Don\'t have an account? <u><b>Sign Up</b></u></string>
     <string name="log_out">Log out</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
