--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     </string-array>
 
     <string name="mongo_cluster_id">chatapp-txfkl</string>
+    <string name="enter_password">Enter Password</string>
 </resources>
